# advent-of-code-24

./: Cargo.toml  README.md  day.rs.tmpl  flake.nix  new_day.sh
src/: input.rs  lib.rs  square.rs
